--- a/_posts/2023-08-23-BS.md
+++ b/_posts/2023-08-23-BS.md
@@ -148,4 +148,6 @@ Using a technique outlined in the blog post ![The singular value decomposition o
 
 We can observer a notable presence of conjunctions.
 
+### Neuron Attribution
+
 
